[gd_scene load_steps=2 format=3]

[ext_resource path="res://scenes/ui/BattleUI.gd" type="Script" id=1]

[node name="BattleUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="TopBar" type="HBoxContainer" parent="."]
anchor_right = 1.0
[node name="PlayerStats" type="Label" parent="TopBar"]
[node name="EnemyStats" type="Label" parent="TopBar"]

[node name="Message" type="Label" parent="."]
anchor_left = 0.3
anchor_right = 0.7
anchor_top = 0.3
anchor_bottom = 0.4
horizontal_alignment = 1

[node name="Hand" type="HBoxContainer" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.6
anchor_bottom = 0.9

[node name="EndTurn" type="Button" parent="."]
anchor_left = 0.8
anchor_right = 0.95
anchor_top = 0.9
anchor_bottom = 0.98
text = "End Turn"
